# SiftGPU_Linux

./: README.md
siftgpu/: makefile
siftgpu/src/SiftGPU/: LiteWindow.h  SiftGPU.h
test_siftgpu/: CMakeLists.txt  FindGlew.cmake  main.cpp
